En esta actualización cambié los primeros nombres

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
         <div class="contenedor-navegacion">
             <div class="contenido-navegacion contenedor">
                 <div class="logo">
-                    <h2>Ristorante <span class="verde">Tu</span><span>ri</span><span class="rojo">lli</span></h2>
-                </div>
+                    <h2>
+                        <span style="color: #FFFFFF;">excursiones </span>
+                        <span style="color: #0033A0;">car</span>
+                        <span style="color: #FFFFFF;">ibe</span>
+                        <span style="color: #D50032;">ños</span>
+                      </h2>
                 <nav class="navegacion ocultar">
                     <a href="#">Inicio</a>
                     <a href="#">Sobre Nosotros</a>
                     <a href="#">Menú</a>
-                    <a href="#">Chef</a>
+                    <a href="#">Ceo</a>
                     <a href="#">Contacto</a>
                 </nav>
                 <div class="hamburguesa">
@@ -50,14 +54,8 @@
     <div class="contenedor-nosotros contenedor">
         <div class="texto-nosotros">
             <p class="bienvenida">Bienvenido a!</p>
-            <h1>Ristorante Turilli</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, fugiat delectus porro suscipit
-                architecto ab impedit accusantium quod voluptate quaerat odio sunt quisquam odit, sapiente aut esse
-                possimus nulla totam!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate eveniet placeat nesciunt harum
-                similique ab, illo debitis ullam ipsa labore quidem vitae sunt et quasi veritatis? Excepturi ex non
-                cumque.
-            </p>
+            <h1>Excursiones Caribe</h1>
+            <p>  Excursiones Cabreza es una empresa líder en la organización de tours y actividades turísticas en la República Dominicana. Ofrecemos experiencias inolvidables para todos los gustos, desde visitas a las paradisíacas islas Saona y Catalina, con sus playas de arena blanca y aguas cristalinas, hasta emocionantes excursiones a la hermosa península de Samaná. En Samaná, podrás explorar sus exuberantes paisajes, impresionantes cascadas como El Limón, y disfrutar de su rica biodiversidad. Además, contamos con excursiones de buceo en los vibrantes arrecifes de coral de Saona y Catalina, para que descubras la fascinante vida marina del Caribe. Nuestro equipo de guías expertos te acompañará en cada paso del camino, brindándote un servicio personalizado y seguro, asegurando que vivas momentos memorables en un paraíso tropical. ¡Con Excursiones Cabreza, cada día es una nueva aventura! </p>
             <a href="#" class="btn btn-rojo">Contactar</a>
         </div>
         <div class="imagenes-nosotros">
@@ -74,11 +72,11 @@
     <section class="menu contenedor">
         <h2 class="texto-platillos">Platillos populares</h2>
         <div class="botones-platillos">
-            <button class="todos btn btn-verde">Todos</button>
-            <button class="ensaladas btn btn-verde">Ensaladas</button>
-            <button class="pasta btn btn-verde">Pasta</button>
-            <button class="pizza btn btn-verde">Pizza</button>
-            <button class="postres btn btn-verde">Postres</button>
+            <button class="todos btn" style="background-color: #0077B6; color: white;">All</button>
+<button class="ensaladas btn" style="background-color: #0077B6; color: white;">Tours</button>
+<button class="pasta btn" style="background-color: #0077B6; color: white;">Buceo</button>
+<button class="pizza btn" style="background-color: #0077B6; color: white;">Buggys</button>
+<button class="postres btn" style="background-color: #0077B6; color: white;">Shopping</button>
         </div>
         <div class="platillos">
             <div class="platillo" data-platillo="ensalada">
