esta actualizacion es de la foto principal y algunas secundarias

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#" class="btn bordes">Il nostro menú</a>
                 </div>
                 <video autoplay loop muted>
-                    <source src="/assets/9d1f6a4397797686108c423b99463f28.mp4">
+                    <source src="assets/img/5vt.mp4">
                 </video>
             </div>
         </div>
@@ -63,8 +63,8 @@
                 <img data-src="assets/img/dominican-republic-1884286_1920.jpg" alt="foto playa primera">
             </div>
             <div class="imagenes2">
-                <img data-src="assets/img/nosotros2.webp" alt="mujeres comiendo pizza">
-                <img data-src="assets/img/nosotros3.webp" alt="plato con pasta">
+                <img data-src="assets/img/basilica.jpg" alt="basilica foto">
+                <img data-src="assets/img/istockphoto-681917346-612x612.jpg" alt="foto de delfines ">
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
                 <div class="precio">
                     <p>$40.0</p>
                     <button><i class="fas fa-shopping-basket"></i></button>
-                </div>
+                </div>;
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/ensalada2.webp" alt="ensalada">
