--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#" class="btn bordes">Il nostro menú</a>
                 </div>
                 <video autoplay loop muted>
-                    <source src="assets/img/5vt.mp4">
+                    <!-- <source src="assets/img/5vt.mp4"> -->
                 </video>
             </div>
         </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="imagenes-nosotros">
             <div class="imagen1">
-                <img data-src="assets/img/dominican-republic-1884286_1920.jpg" alt="foto playa primera">
+               <img data-src="assets/img/dominican-republic-1884286_1920.jpg" alt="foto playa primera">
             </div>
             <div class="imagenes2">
                 <img data-src="assets/img/basilica.jpg" alt="basilica foto">
