--- a/index.html
+++ b/index.html
@@ -345,6 +345,33 @@
             </div>
         </div>
     </div>
+
+
+
+
+    <div class="platillos">
+        <div class="platillo">
+            <a href="ensalada.html">
+                <img src="images/ensalada.jpg" alt="Ensalada de Quinoa">
+            </a>
+            <h2>Ensalada de Quinoa</h2>
+            <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
+        </div>
+        <div class="platillo">
+            <a href="pasta.html">
+                <img src="images/pasta.jpg" alt="Pasta al Pesto">
+            </a>
+            <h2>Pasta al Pesto</h2>
+            <p>Pasta con salsa pesto, piñones, albahaca, parmesano.</p>
+        </div>
+        <div class="platillo">
+            <a href="pizza.html">
+                <img src="images/pizza.jpg" alt="Pizza Margherita">
+            </a>
+            <h2>Pizza Margherita</h2>
+            <p>Masa fina, tomate, mozzarella, albahaca.</p>
+        </div>
+    </div>
     <footer class="footer">
         <p>Todos los derechos reservados &copy; 2021 Risotrante Turilli, desarrollado por Azael</p>
     </footer>
