--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="contenedor-navegacion">
             <div class="contenido-navegacion contenedor">
                 <div class="logo">
-                    <h2>
-                        <span style="color: #FFFFFF;">excursiones </span>
+                    <h2 style="white-space: nowrap;">
+                        <span style="color: #FFFFFF;">excursiones</span>
                         <span style="color: #0033A0;">car</span>
                         <span style="color: #FFFFFF;">ibe</span>
                         <span style="color: #D50032;">ños</span>
@@ -43,11 +43,11 @@
         <div class="contenido-header">
             <div class="contenedor-encabezado">
                 <div class="texto-encabezado">
-                    <h2>Accoglienza!</h2>
-                    <a href="#" class="btn bordes">Il nostro menú</a>
+                    <h2>¡Bienvenidos!</h2>
+                    <a href="#" class="btn bordes">Il mostrar menú</a>
                 </div>
                 <video autoplay loop muted>
-                    <!-- <source src="assets/img/5vt.mp4"> -->
+                <source src="assets/img/videopagina1 (1) (1) (1).mp4">
                 </video>
             </div>
         </div>
@@ -57,8 +57,8 @@
         <div class="texto-nosotros">
             <p class="bienvenida">Bienvenido a!</p>
             <h1>Excursiones Caribe</h1>
-            <p>  Excursiones Cabreza es una empresa líder en la organización de tours y actividades turísticas en la República Dominicana. Ofrecemos experiencias inolvidables para todos los gustos, desde visitas a las paradisíacas islas Saona y Catalina, con sus playas de arena blanca y aguas cristalinas, hasta emocionantes excursiones a la hermosa península de Samaná. En Samaná, podrás explorar sus exuberantes paisajes, impresionantes cascadas como El Limón, y disfrutar de su rica biodiversidad. Además, contamos con excursiones de buceo en los vibrantes arrecifes de coral de Saona y Catalina, para que descubras la fascinante vida marina del Caribe. Nuestro equipo de guías expertos te acompañará en cada paso del camino, brindándote un servicio personalizado y seguro, asegurando que vivas momentos memorables en un paraíso tropical. ¡Con Excursiones Cabreza, cada día es una nueva aventura! </p>
-            <a href="#" class="btn btn-rojo">Contactar</a>
+            <p> Descubre el paraíso con Excursiones Cabreza. Te llevamos a las impresionantes islas Saona y Catalina, donde playas de arena blanca, aguas cristalinas y vibrantes arrecifes de coral te esperan. Disfruta de experiencias únicas de buceo y relajación, acompañado por guías expertos que harán de tu visita un recuerdo inolvidable. ¡El Caribe te llama! </p>
+            <a href="#" class=" btn-azul">Contactar</a>
         </div>
         <div class="imagenes-nosotros">
             <div class="imagen1">
@@ -72,13 +72,13 @@
     </div>
 
     <section class="menu contenedor">
-        <h2 class="texto-platillos">Platillos populares</h2>
+        <h2 class="texto-platillos">Excursiones populares</h2>
         <div class="botones-platillos">
-            <button class="todos btn" style="background-color: #0077B6; color: white;">All</button>
-<button class="ensaladas btn" style="background-color: #0077B6; color: white;">Tours</button>
-<button class="pasta btn" style="background-color: #0077B6; color: white;">Buceo</button>
-<button class="pizza btn" style="background-color: #0077B6; color: white;">Buggys</button>
-<button class="postres btn" style="background-color: #0077B6; color: white;">Shopping</button>
+            <button class="todos btn" style="background-color: #00A8E8; color: white;">All</button>
+<button class="ensaladas btn" style="background-color: #00A8E8; color: white;">Tours</button>
+<button class="pasta btn" style="background-color: #00A8E8; color: white;">Buceo</button>
+<button class="pizza btn" style="background-color: #00A8E8; color: white;">Buggys</button>
+<button class="postres btn" style="background-color: #00A8E8; color: white;">Shopping</button>
         </div>
 
 
@@ -87,7 +87,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle del Platillo</title>
+    <title>Detalle de Excursiones</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -118,7 +118,7 @@
         <div class="platillos">
     <div class="platillo" 
          data-imagen="assets/img/ensalada.webp" 
-         data-titulo="Ensalada de Quinoa" 
+         data-titulo="Excursion Saona" 
          data-descripcion="Quinoa, cerezas, tomate, aceitunas, cereal.">
         <img src="assets/img/ensalada.webp" alt="ensalada">
         <h2>Quinoa</h2>
@@ -249,9 +249,9 @@
 
     <div class="separador">
         <div class="contenido-separador contenedor">
-            <h2>Comida italiana para empezar el día</h2>
-            <p>Empieza tu día comiedo deliciosa comida o un café italiano</p>
-            <a href="#" class="btn btn-verde">Ordenar ahora</a>
+            <h2>empieza tu dia con una excursions</h2>
+            <p>inicia con una tour a la isla Saona</p>
+            <a href="#" class="btn btn-azul;">Ordenar ahora</a>
         </div>
     </div>
 
@@ -268,7 +268,7 @@
                     natus tempora recusandae hic laborum error ducimus repellat, laudantium temporibus tenetur totam
                     sint
                     consequuntur eligendi! Asperiores, ad.</p>
-                <a href="#" class="btn btn-verde">Leer Bíografia</a>
+                <a href="#" class="btn btn-azul">Leer Bíografia</a>
             </div>
             <div class="imagen-chef">
                 <img data-src="/assets/img/chef.webp" alt="fotografia del chef">
@@ -280,9 +280,9 @@
 
         <div class="informacion-contacto">
             <h3>Contactanos</h3>
-            <p><i class="fas fa-map-marker-alt"></i>23. Roma Italia 75012</p>
-            <p><i class="fas fa-envelope"></i> luca@turilli.it</p>
-            <p><i class="fas fa-phone-alt"></i>+31123410921</p>
+            <p><i class="fas fa-map-marker-alt"></i>Punta cana, Bavaro</p>
+            <p><i class="fas fa-envelope"></i> excursionescaribe@gmail.com</p>
+            <p><i class="fas fa-phone-alt"></i>+1 849 268 6519</p>
             <div class="redes-sociales">
                 <i class="fab fa-facebook-square"></i>
                 <i class="fab fa-twitter-square"></i>
@@ -305,14 +305,14 @@
             </div>
             <div class="input-formulario">
                 <label for="telefono">Teléfono</label>
-                <input type="tel" placeholder="+90 543 779 9410" id="telefono">
+                <input type="tel" placeholder="+1 849 268 6519" id="telefono">
             </div>
             <div class="input-formulario">
                 <label for="mensaje">Mensaje</label>
                 <textarea></textarea>
             </div>
             <div class="btn-formulario">
-                <input type="submit" class="btn btn-verde" value="Enviar">
+                <input type="submit" class="btn btn-azul" value="Enviar">
             </div>
             
         </form>
@@ -321,16 +321,16 @@
         <div class="contenedor-piepagina contenedor">
             <div class="info">
                 <h3>Dirección</h3>
-                <p>23.Roma Italia 75012</p>
+                <p>Bavaro punta cana</p>
             </div>
             <div class="info">
                 <h3>Días especiales</h3>
-                <p>Sabados y Jueves 7am - 11pm</p>
-                <p>+3123410921</p>
+                <p>Sabados y Domingo 6am - 2pm</p>
+                <p>+1 849-268-6519</p>
             </div>
             <div class="info">
                 <h3>Horarios</h3>
-                <p>Lunes - Domingo 7am - 11pm</p>
+                <p>Lunes - Domingo 6am - 8pm</p>
                 <div class="redes-sociales redes-pie">
                     <i class="fab fa-facebook-square"></i>
                     <i class="fab fa-twitter-square"></i>
@@ -341,40 +341,11 @@
                 <h3>Noticias</h3>
                 <p>suscribete para recibir más noticias</p>
                 <input type="email" placeholder="Tu correo">
-                <input type="submit" class="btn btn-verde" value="Suscribirse">
+                <input type="submit" class="btn btn-azul" value="Suscribirse">
             </div>
         </div>
     </div>
 
-
-
-
-    <div class="platillos">
-        <div class="platillo">
-            <a href="ensalada.html">
-                <img src="images/ensalada.jpg" alt="Ensalada de Quinoa">
-            </a>
-            <h2>Ensalada de Quinoa</h2>
-            <p>Quinoa, cerezas, tomate, aceitunas, cereal.</p>
-        </div>
-        <div class="platillo">
-            <a href="pasta.html">
-                <img src="images/pasta.jpg" alt="Pasta al Pesto">
-            </a>
-            <h2>Pasta al Pesto</h2>
-            <p>Pasta con salsa pesto, piñones, albahaca, parmesano.</p>
-        </div>
-        <div class="platillo">
-            <a href="pizza.html">
-                <img src="images/pizza.jpg" alt="Pizza Margherita">
-            </a>
-            <h2>Pizza Margherita</h2>
-            <p>Masa fina, tomate, mozzarella, albahaca.</p>
-        </div>
-    </div>
-    <footer class="footer">
-        <p>Todos los derechos reservados &copy; 2021 Risotrante Turilli, desarrollado por Azael</p>
-    </footer>
     <script src="js/app.js"></script>
 
 </body>
