en esta actualizacion arregle las paginas de menu  dandolo una pagina a cada una

--- a/detalle.html
+++ b/detalle.html
@@ -1,29 +1,31 @@
-<!DOCTYPE html>
+<!-- <
+
+!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle del Platillo</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
+    <link rel="stylesheet" href="css/estilos.css"> <!-- Verifica la ruta de tu archivo CSS -->
+<!-- </head>
 <body>
     <div class="detalle">
         <h1 id="titulo-platillo"></h1>
         <img id="imagen-platillo" src="" alt="Imagen del Platillo">
         <p id="descripcion-platillo"></p>
         <a href="index.html" class="btn">Volver al Menú</a>
-    </div>
+    </div> -->
 
-    <script>
+    <!-- <script>
         // Datos de los platillos
         const platillos = [
-            { id: 1, imagen: 'images/ensalada.jpg', titulo: 'Ensalada de Quinoa', descripcion: 'Quinoa, cerezas, tomate, aceitunas, cereal.' },
+            { id: 1, imagen: 'images/ensalada.jpg', titulo: 'Ensalada de Quinoa', descripcion: 'Quinoa, cerezas, tomate, aceitunas, cerealnnn.' },
             { id: 2, imagen: 'images/pasta.jpg', titulo: 'Pasta al Pesto', descripcion: 'Pasta con salsa pesto, piñones, albahaca, parmesano.' },
             { id: 3, imagen: 'images/pizza.jpg', titulo: 'Pizza Margherita', descripcion: 'Masa fina, tomate, mozzarella, albahaca.' },
             // Agrega más platillos según sea necesario
         ];
-
-        // Obtener el ID del platillo desde la URL
+<!--  -->
+        <!-- // Obtener el ID del platillo desde la URL
         const params = new URLSearchParams(window.location.search);
         const idPlatillo = parseInt(params.get('id'));
 
@@ -40,6 +42,31 @@
             document.getElementById('titulo-platillo').textContent = 'Platillo no encontrado';
             document.getElementById('descripcion-platillo').textContent = 'Lo sentimos, este platillo no está disponible.';
         }
-    </script>
-</body>
-</html>
+    </script> -->
+<!-- </body>
+</html>  -->
+
+
+
+
+
+
+<!--   -->
+<!-- <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalle del Platillo</title>
+    <link rel="stylesheet" href="css/estilos.css">
+</head>
+<body>
+    <div class="detalle">
+        <h1 id="titulo-platillo"></h1>
+        <img id="imagen-platillo" src="" alt="Imagen del Platillo">
+        <p id="descripcion-platillo"></p>
+        <a href="index.html" class="btn">Volver al Menú</a>
+    </div>
+
+    <script> -->
+ 
