--- a/detalle-ensalada.html
+++ b/detalle-ensalada.html
@@ -1,16 +1,22 @@
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ensalada de Quinoa</title>
-    <link rel="stylesheet" href="css/estilos.css"> <!-- Asegúrate de que la ruta sea correcta -->
+    <title>Detalle del Platillo - Ensalada de Quinoa</title>
+    <link rel="stylesheet" href="css/estilos.css"> <!-- Asegúrate de que esta ruta sea correcta -->
 </head>
 <body>
     <div class="detalle">
         <h1>Ensalada de Quinoa</h1>
-        <img src="images/ensalada.jpg" alt="Imagen del Platillo Ensalada de Quinoa">
-        <p>Quinoa, cerezas, tomate, aceitunas, cerealdddd.</p>
+        <img src="images/ensalada.jpg" alt="Ensalada de Quinoa">
+        <p>Quinoa, cerezas, tomate, aceitunas, cerealfgffgg.</p>
         <a href="index.html" class="btn">Volver al Menú</a>
     </div>
 </body>
