--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             <div class="contenedor-encabezado">
                 <div class="texto-encabezado">
                     <h2>¡Bienvenidos!</h2>
-                    <a href="#" class="btn bordes">Il mostrar menú</a>
+                    <a href="#" class="btn bordes">  <span style="color: #FFFFFF;">excursiones</span>
+                        <span style="color: #0033A0;">car</span>
+                        <span style="color: #FFFFFF;">ibe</span>
+                        <span style="color: #D50032;">ños</span></a>
                 </div>
                 <video autoplay loop muted>
                 <source src="assets/img/videopagina1 (1) (1) (1).mp4">
@@ -192,23 +195,7 @@
             </div>
         </div>
 
-        <form class="formulario">
-            <div class="input-formulario">
-                <label for="nombre">Nombre</label>
-                <input type="text" placeholder="Pedro" id="nombre">
-            </div>
-            <div class="input-formulario">
-                <label for="apellidos">Apellido</label>
-                <input type="text" placeholder="Pedro" id="apellidos">
-            </div>
-            <div class="input-formulario">
-                <label for="correo">Correo</label>
-                <input type="email" placeholder="ejemplo@ejemplo.com" id="correo">
-            </div>
-            <div class="input-formulario">
-                <label for="telefono">Teléfono</label>
-                <input type="tel" placeholder="+1 849 268 6519" id="telefono">
-            </div>
+        
             <div class="input-formulario">
                 <label for="mensaje">Mensaje</label>
                 <textarea></textarea>
