--- a/detalle-ensalada.html
+++ b/detalle-ensalada.html
@@ -16,7 +16,7 @@
     <div class="detalle">
         <h1>Ensalada de Quinoa</h1>
         <img src="images/ensalada.jpg" alt="Ensalada de Quinoa">
-        <p>Quinoa, cerezas, tomate, aceitunas, cerealfgffgg.</p>
+        <p>Quinoa, cerezas, tomate, aceitunas, cerealfgffggeee.</p>
         <a href="index.html" class="btn">Volver al Menú</a>
     </div>
 </body>
