--- a/detalle-pasta.html
+++ b/detalle-pasta.html
@@ -19,7 +19,7 @@
         <img src="assets/img/postres3.jpg" alt="Ensalada de Quinoa">
         <img src="assets/img/postres3.jpg">
         
-        <p>Quinoa, cerezas, tomate, aceitunas, cerealfgffgg.</p>
+        <p>Quinoa, cerezas, tomate, aceitunas, cerealfgffggrrr.</p>
         <a href="index.html" class="btn">Volver al Menú</a>
     </div>
 </body> 
