actualizacion de pagina buggy

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
     </div>
 
     <div class="platilloo">
-        <a href="detalle-samana.html">
-            <img src="images/pasta.jpg" alt="Samaná Island">
+        <a href="Aventura en buggy .html">
+            <img src="images/pasta.jpg" alt="Aventura en buggy">
         </a>
-        <h2><a href="detalle-samana.html">Samaná Island</a></h2>
-        <p>Pasta con salsa pesto, piñones, albahaca, parmesano.</p>
+        <h2><a href="Aventura en buggy.html">Aventura en buggy</a></h2>
+        <p>buggy buggy.</p>
     </div>
 
 </div>
