--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         <a href="private-speedboat-excursion-to-saona-island.html">
             <img src="assets/img/64809720e520e-islasaonaexcursionlanchaiway.jpg" alt="catalina Island and diving ">
         </a>
-        <h2><a href="private-speedboat-excursion-to-saona-island">private speedboat excursion to saona island</a></h2>
-        <p>Explora la belleza de la Saona Island .</p>
+        <h2><a href="private-speedboat-excursion-to-saona-island.html">private-speedboat-excursion-to-saona-island</a></h2>
+        <p>samana-island.</p>
     </div>
 
     <div class="platilloos Island">
