--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ html[lang="es"] {
         <a href="LOS-HAITISES.html">
             <img src="assets/img/Parque-Nacional-Los-Haitises.webp" alt="los haitises">
         </a>
-        <h2><a href="los-haitises.html">los haitises </a></h2>
+        <h2><a href="LOS-HAITISES.html">los haitises </a></h2>
         <p>los haitises.</p>
     
 </div>
