--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@ html[lang="es"] {
         <p>SHOPPING.</p>
     </div>
     <div class="platilloos tours">
-        <a href="LOS-HAITISES.html">
+        <a href="haitises.html">
             <img src="assets/img/Parque-Nacional-Los-Haitises.webp" alt="los haitises">
         </a>
-        <h2><a href="LOS-HAITISES.html">los haitises </a></h2>
+        <h2><a href="haitises.html">los haitises </a></h2>
         <p>los haitises.</p>
     
 </div>
