--- a/samana-island.html
+++ b/samana-island.html
@@ -124,30 +124,30 @@
 
     <main>
         <div class="producto-card">
-            <img src="assets/img/samanaisla1.jpg" alt="Producto 1">
+            <img src="assets/img/samanaisla1.jpg" alt="1 pax">
             <h3>Producto 1</h3>
             <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
+            <div class="precio">$90US</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 Reservar ahora
             </a>
         </div>
 
         <div class="producto-card">
-            <img src="assets/img/samanaisla2.jpg" alt="Producto 2">
+            <img src="assets/img/samanaisla2.jpg" alt="2 PAX">
             <h3>Producto 2</h3>
             <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
+            <div class="precio">$180US</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 Reservar ahora
             </a>
         </div>
 
         <div class="producto-card">
-            <img src="assets/img/samanaisla3.jpg" alt="Producto 3">
+            <img src="assets/img/samanaisla3.jpg" alt="10 PAX">
             <h3>Producto 3</h3>
             <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
+            <div class="precio">$900</div>
             <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 Reservar ahora
             </a>
